# pygbm

./: README.md  pyproject.toml
docs/: conf.py  gbm_simulator.rst  index.rst  requirements.txt
docs/_build/doctrees/: environment.pickle  gbm_module.doctree  gbm_simulator.doctree  index.doctree
docs/_build/doctrees/source/: gbm_simulator.doctree
docs/_build/html/: .buildinfo  gbm_module.html  gbm_simulator.html  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: gbm_module.rst.txt  index.rst.txt
docs/_build/html/source/: gbm_simulator.html
docs/source/: gbm_simulator.rst
gbm_simulator/: base_simulator.py  cli.py
gbm_simulator.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
